--- a/gui/updates.html
+++ b/gui/updates.html
@@ -3,8 +3,8 @@
   <head>
     <style>
       .pt-3-half {
-  padding-top: 1.4rem;
-  }
+        padding-top: 1rem;
+      }
     </style>
   </head>
 
@@ -12,98 +12,18 @@
 
   <!-- Editable table -->
 <div class="card">
+  
   <h3 class="card-header text-center font-weight-bold text-uppercase py-4">List of Incidents</h3>
+  
   <div class="card-body">
-    <div id="editableTable" class="table-editable">
-      <span class="table-add float-right mb-3 mr-2"><a href="#!" class="text-success"><i
-            class="fa fa-plus fa-2x" aria-hidden="true"></i></a></span>
-      <table class="table table-bordered table-responsive-md table-striped text-center">
-        <thead>
-          <tr>
-            <th class="text-center">Person Name</th>
-            <th class="text-center">Age</th>
-            <th class="text-center">Company Name</th>
-            <th class="text-center">Country</th>
-            <th class="text-center">City</th>
-            <th class="text-center">Move</th>
-            <th class="text-center">Remove</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td class="pt-3-half" contenteditable="true">Aurelia Vega</td>
-            <td class="pt-3-half" contenteditable="true">30</td>
-            <td class="pt-3-half" contenteditable="true">Deepends</td>
-            <td class="pt-3-half" contenteditable="true">Spain</td>
-            <td class="pt-3-half" contenteditable="true">Madrid</td>
-            <td class="pt-3-half">
-              <span class="table-up"><a href="#!" class="indigo-text"><i class="fa fa-arrow-up"
-                    aria-hidden="true"></i></a></span>
-              <span class="table-down"><a href="#!" class="indigo-text"><i class="fa fa-arrow-down"
-                    aria-hidden="true"></i></a></span>
-            </td>
-            <td>
-              <span class="table-remove"><button type="button"
-                  class="btn btn-danger btn-rounded btn-sm my-0">Remove</button></span>
-            </td>
-          </tr>
-          <!-- This is our clonable table line -->
-          <tr>
-            <td class="pt-3-half" contenteditable="true">Guerra Cortez</td>
-            <td class="pt-3-half" contenteditable="true">45</td>
-            <td class="pt-3-half" contenteditable="true">Insectus</td>
-            <td class="pt-3-half" contenteditable="true">USA</td>
-            <td class="pt-3-half" contenteditable="true">San Francisco</td>
-            <td class="pt-3-half">
-              <span class="table-up"><a href="#!" class="indigo-text"><i class="fa fa-arrow-up"
-                    aria-hidden="true"></i></a></span>
-              <span class="table-down"><a href="#!" class="indigo-text"><i class="fa fa-arrow-down"
-                    aria-hidden="true"></i></a></span>
-            </td>
-            <td>
-              <span class="table-remove"><button type="button"
-                  class="btn btn-danger btn-rounded btn-sm my-0">Remove</button></span>
-            </td>
-          </tr>
-          <!-- This is our clonable table line -->
-          <tr>
-            <td class="pt-3-half" contenteditable="true">Guadalupe House</td>
-            <td class="pt-3-half" contenteditable="true">26</td>
-            <td class="pt-3-half" contenteditable="true">Isotronic</td>
-            <td class="pt-3-half" contenteditable="true">Germany</td>
-            <td class="pt-3-half" contenteditable="true">Frankfurt am Main</td>
-            <td class="pt-3-half">
-              <span class="table-up"><a href="#!" class="indigo-text"><i class="fa fa-arrow-up"
-                    aria-hidden="true"></i></a></span>
-              <span class="table-down"><a href="#!" class="indigo-text"><i class="fa fa-arrow-down"
-                    aria-hidden="true"></i></a></span>
-            </td>
-            <td>
-              <span class="table-remove"><button type="button"
-                  class="btn btn-danger btn-rounded btn-sm my-0">Remove</button></span>
-            </td>
-          </tr>
-          <!-- This is our clonable table line -->
-          <tr class="hide">
-            <td class="pt-3-half" contenteditable="true">Elisa Gallagher</td>
-            <td class="pt-3-half" contenteditable="true">31</td>
-            <td class="pt-3-half" contenteditable="true">Portica</td>
-            <td class="pt-3-half" contenteditable="true">United Kingdom</td>
-            <td class="pt-3-half" contenteditable="true">London</td>
-            <td class="pt-3-half">
-              <span class="table-up"><a href="#!" class="indigo-text"><i class="fa fa-arrow-up"
-                    aria-hidden="true"></i></a></span>
-              <span class="table-down"><a href="#!" class="indigo-text"><i class="fa fa-arrow-down"
-                    aria-hidden="true"></i></a></span>
-            </td>
-            <td>
-              <span class="table-remove"><button type="button"
-                  class="btn btn-danger btn-rounded btn-sm my-0">Remove</button></span>
-            </td>
-          </tr>
-        </tbody>
-      </table>
+    <div class="text-center buttonEditWrapper">
+      <button class="btn btn-info btn-rounded btn-sm buttonEdit" onclick="openModal()" >Edit<i class="fa fa-pencil-square-o ml-1"></i></a>
     </div>
+    <!-- <span>
+        <button type="button" class="btn btn-info" id="but_add">Add New Row</button>
+    </span>       -->
+    <!-- <span class="table-add float-right mb-3 mr-2"><a href="#!" class="text-success"><i class="fa fa-plus fa-2x" aria-hidden="true"></i></a></span> -->
+    <div id="editableTable" class="table-editable"> </div>
   </div>
 </div>
 <!-- Editable table -->
