Added Bigquery data and Summary

--- a/gui/analytics.html
+++ b/gui/analytics.html
@@ -41,17 +41,17 @@
 </style>
 <body>
 
-<h2>Filter DIV Elements</h2>
+<h2>Placeholder for ML. Predict 'Closure code' based on multiple parameters</h2>
 
-<div id="myBtnContainer">
+<!-- <div id="myBtnContainer">
   <button class="btn active" onclick="filterSelection('all')"> Show all</button>
   <button class="btn" onclick="filterSelection('cars')"> Cars</button>
   <button class="btn" onclick="filterSelection('animals')"> Animals</button>
   <button class="btn" onclick="filterSelection('fruits')"> Fruits</button>
   <button class="btn" onclick="filterSelection('colors')"> Colors</button>
-</div>
+</div> -->
 
-<div class="container">
+<!-- <div class="container">
   <div class="filterDiv cars">BMW</div>
   <div class="filterDiv colors fruits">Orange</div>
   <div class="filterDiv cars">Volvo</div>
@@ -65,7 +65,7 @@
   <div class="filterDiv fruits">Banana</div>
   <div class="filterDiv fruits">Lemon</div>
   <div class="filterDiv animals">Cow</div>
-</div>
-<script src="Scripts/analytics.js"></script>
+</div> -->
+<!-- <script src="Scripts/analytics.js"></script> -->
 </body>
 </html>
