--- a/gui/summary.html
+++ b/gui/summary.html
@@ -3,7 +3,7 @@
 <body style="background-color:darkslategray">
 
 <!-- <h2>HTML Image</h2> -->
-<img src="./images/incident-summary.jpg" alt="Summary" width="1000" height="600">
-
+<!-- <img src="./images/incident-summary.jpg" alt="Summary" width="1000" height="600"> -->
+<iframe width="1000" height="675" src="https://datastudio.google.com/embed/reporting/a047d2cf-5c5a-4f92-99cd-e006387b11f3/page/wiOfB" frameborder="0" style="border:0" allowfullscreen></iframe>
 </body>
 </html>
