--- a/gui/tabs.html
+++ b/gui/tabs.html
@@ -31,11 +31,11 @@
             <!-- https://stackoverflow.com/questions/22588976/how-to-load-a-html-page-into-a-div-by-clicking-a-li-inside-a-menu -->
             <div class="sidenav">
                 <!-- https://www.w3schools.com/icons/fontawesome5_icons_mathematics.asp -->
-                <a href="querySelector.html" style="font-size:smaller"><i class="fa fa-search"></i> Query Selector</a>
-                <a href="summary.html" style="font-size:smaller"><i class="fa fa-calculator"></i> Incident Summary</a>
+                <a href="querySelector.html" style="font-size:smaller"><i class="fa fa-search"></i> My Incidents</a>
+                <a href="summary.html" style="font-size:smaller"><i class="fa fa-calculator"></i> Dashboard</a>
                 <a href="updates.html" style="font-size:smaller"><i class="fa fa-edit"></i> Incident Updates</a>
                 <a href="analytics.html" style="font-size:smaller"><i class="fa fa-bar-chart"></i> Analytics</a>
-                <a href="monitoring.html" style="font-size:smaller"><i class="fa fa-desktop"></i> Monitoring</a>                
+                <!-- <a href="monitoring.html" style="font-size:smaller"><i class="fa fa-desktop"></i> Monitoring</a>                 -->
               </div>
               <div id="mainContent" style="margin-left:82px;background-image:url('./images/header-background.jpg');background-size: cover;background-position: center;position: relative">
                 <div class="overlay"></div>
