--- a/gui/tabs.html
+++ b/gui/tabs.html
@@ -7,7 +7,7 @@
 <!------ Include the above in your HEAD tag ---------->
 <body>   
     <div>
-        <nav class="navbar navbar-expand-md" style="background-color:rgb(30, 29, 34);height:35px;color:rgb(145, 137, 137);font-size:x-large">Rakshak
+        <nav class="navbar navbar-expand-md" style="background-color:rgb(30, 29, 34);height:35px;color:rgb(250, 250, 250);font-size:x-large">Rakshak
             <!-- <a class="navbar-brand" style="font-size:x-large" href="">Rakshak</a> -->
             <div class="collapse navbar-collapse" id="main-navigation">
               <ul class="navbar-nav">
@@ -15,7 +15,7 @@
               </ul>
             </div>
           </nav>
-          <nav class="navbar navbar-expand-md" style="background-color: rgb(30, 29, 34);height:25px;color:rgb(141, 133, 133);font-size:medium">Intelligent Incident Manager
+          <nav class="navbar navbar-expand-md" style="background-color: rgb(30, 29, 34);height:25px;color:rgb(250, 250, 250);font-size:medium">Intelligent Incident Manager
             <!-- <a class="navbar-brand" style="font-size:medium" href="">Welcome to the next gen Incident Manager</a> -->
             <div class="collapse navbar-collapse" id="main-navigation">
               <ul class="navbar-nav">
@@ -39,9 +39,9 @@
               </div>
               <div id="mainContent" style="margin-left:82px;background-image:url('./images/header-background.jpg');background-size: cover;background-position: center;position: relative">
                 <div class="overlay"></div>
-                <div class="pull-right">
+                <div>
                   <!-- https://www.timeanddate.com/clocks/free.html -->
-                  <iframe src="http://free.timeanddate.com/clock/i7g1xkf4/n1038/fn6/fs22/fcfff/tc000/pc000/ftb/bas2/bat1/bacfff/pa8/tt0/tw1/th1/ta1/tb4" 
+                  <iframe style="height:200px;width:800px" src="http://free.timeanddate.com/clock/i7g1xkf4/n1038/fn6/fs22/fcfff/tc000/pc000/ftb/bas2/bat1/bacfff/pa8/tt0/tw1/th1/ta1/tb4" 
                 style="margin-left:82px"
                 frameborder="0" 
                 width="284" 
