--- a/gui/tabs.html
+++ b/gui/tabs.html
@@ -34,7 +34,7 @@
                 <a href="querySelector.html" style="font-size:smaller"><i class="fa fa-search"></i> My Incidents</a>
                 <a href="summary.html" style="font-size:smaller"><i class="fa fa-calculator"></i> Dashboard</a>
                 <a href="updates.html" style="font-size:smaller"><i class="fa fa-edit"></i> Incident Updates</a>
-                <a href="analytics.html" style="font-size:smaller"><i class="fa fa-bar-chart"></i> Analytics</a>
+                <!-- <a href="analytics.html" style="font-size:smaller"><i class="fa fa-bar-chart"></i> Analytics</a> -->
                 <!-- <a href="monitoring.html" style="font-size:smaller"><i class="fa fa-desktop"></i> Monitoring</a>                 -->
               </div>
               <div id="mainContent" style="margin-left:82px;background-image:url('./images/header-background.jpg');background-size: cover;background-position: center;position: relative">
